2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSMatrix.m (_altModifier:): Fix swapped macro arguments,
	which could lead to a wrong selection and potentially a crash when
	extending the selection with the alt modifier key.

2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTableHeaderCell.m (-initTextCell:): Don't wrap text in
	table view headers by default. This partially fixes #30020.

2011-03-08  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSLayoutManager.m: Implement temporary attributes
	* Header/AppKit/NSLayoutManager.h: Add a _temporaryAttributes ivar

2011-03-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSGraphicsContext.m (+saveGraphicsState): Release the
	stack, as it is retained in the thread dictionary.
	Leak found by static code analyser.

2011-03-07 Fred Kiefer <FredKiefer@gmx.de>

	* gui/Headers/Additions/GNUstepGUI/GSDisplayServer.h
	* gui/Source/GSDisplayServer.m
	* gui/Source/NSCursor.m: Change the way the image for the cursor
	gets passed on to the backend. The old way could only work for 8
	bit data.

2011-03-07 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSKeyValueBinding.h
	* Source/externs.m: Add a few more binding names.
	* Source/NSPopUpButton.m: Implement NSSelectedTagBinding.

2011-03-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m
	* Source/NSObjectController.m
	* Source/NSControl.m
	* Source/NSMenuItem.m
	* Source/NSKeyValueBinding.m
	* Source/NSTextField.m
	* Source/NSView.m: Release the key value binding as it will be
	retained in the binding table.
	Leak found by static code analyser.

2011-03-06 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMatrix.m (-_privateFrame:...numberOfColumns): Change
	the init helper method to conform with the Objective-C conventions,
	* Source/GSGormLoading.m (GSNibItem-initWithCoder:): Retain the
	shared application before returning it.
	* Source/NSDataLink.m: Correct the init methods to return a
	retained object.